static/style.css
.logo {
    font-size: 60px;
    color: whitesmoke;
    margin-left: 35px;
    margin-right: auto;
    margin-top: 25px;
    margin-bottom: 35px;
    text-decoration: underline;
}

header {
    font-family: 'Russo One', sans-serif;
    background-color:rgb(19, 19, 65);
    display: flex;
    justify-content: space-between;
    width: 100%;
    position: fixed;
}

header > nav > a {
    color: white;
    align-self: center;
    text-decoration: none;
    padding: 10px;
    transition-duration: 0.2s;
    margin-right: 25px;
}

a:hover {
    color: orangered;
}

header > nav {
    align-self: center;
}

body {
    background-image: url('/static/imgs/stadium_logo.jpeg');
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    background-color: rgba(255,255,255,0.6);
    background-blend-mode: lighten;
    width: 100%;
    height: auto;
    z-index: 1;
    background-attachment: fixed;
    font-family: 'Russo One', sans-serif;
    margin: 0;
}

.information_display {
    display: grid;
    color: rgb(19, 19, 65);
    text-decoration: none;
    padding-left: 80px;
    padding-right: 45px
    /* background-color: white  */
}

ul {
    margin-top: 5px;
    margin-bottom: 0px;
}

li {
    list-style-type: none;
}

#team_name {
    color: darkslategrey;
    font-family: 'Russo One', sans-serif;
    font-size: 20px;
    text-decoration: none;
    margin-right: 35px;
    padding-left: 50px;
    align-content: center;
}

.heading_area {
    color: rgb(19, 19, 65);
    font-size: 35px;
    font-weight: bold;
    padding-left: 45px;     
    padding-top: 10px;
    display: flex;
    justify-content: space-between;
}

.homepage {
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    width: 100%;
    height: 100%;
    background-attachment: fixed;
    background-position: 50%;
}


/* .background_image {
    min-height: 84%;
    min-width: 1025px;
    width: 100%;
    height: 80%;
    position: fixed;
    left: 0;
    opacity: 0.20;
    z-index: 1;
} */

/* .background_home {
    min-height: 84%;
    min-width: 1025px;
    width: 100%;
    height: 80%;
    position: fixed;
    left: 0;
} */

/* #content-wrapper {
    position: fixed;
    background: none;
    z-index: 10;

} */

.button {
    font-family: 'Russo One', sans-serif;
    color: rgb(19, 19, 65);
    align-self: center;
    text-decoration: none;
    border: 5px, solid, white;
    border-style: solid;
    padding: 10px;
    border-radius: 50px;
    background-color: white;
    padding-left: 10px;
    margin-right: 15px;
}

.button_group {
    display: flex;
    align-items: center;
    padding-right: 10px;
    padding-left: 15px;
    align-content: center;
}

.delete_button {
    font-family: 'Russo One', sans-serif;
    color: rgb(19, 19, 65);
    align-self: center
}

a {
    color:rgb(19, 19, 65);
}

#text_box {
    font-family: 'Russo One', sans-serif;
    padding-top: 10px;
}

.new {
    text-align: center;
    padding-top: 70px;
}

h2 {
    padding-left: 45px;
}

.player_index {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

.player_index div {
    flex: 1 0 10%;
    padding-right: 30px;
    padding-left:30px;
    white-space: nowrap;
    
}

.information_display > p {
    font-size: 25px;
    padding-left: 25px;
}

.fixture_list {
    padding-top: 25px;
    padding-left: 35px;
}

/* #new-team {
    display: flex;
    justify-content: center;
} */

